Fixed Text Colors to make it more readable (yung bullets di pa napalitan)

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -31,3 +31,7 @@
 	color: brown;
 	background: rgba(250,235,215, 0.5);
 }
+
+#fas {
+	color: black;
+}
